main.css
/* ... */
.file-ghost img {
    height: 100%;
    margin: 0;
    width: auto;
    margin-left: 50%;
    transform: translate(-50%);
    pointer-events: none;
    border-radius: 0.25rem;
}

.file-ghost p {
    line-height: 1.5rem;
    margin: 0;
    width: 100%;
    text-align: center;;
}




#app-bar {
    height: 26px;
    width: 100%;
    display: grid;
    grid-template-columns: auto 150px;
    background-color: var(--main-bg-color);
    z-index: 5;
}

#app-bar #drag-region {
    width: 100%;
    position: relative;
    height: 100%;
    -webkit-app-region: drag;
    display: inline-block;
    z-index: -1;
}

#main-container-wrapper {
    height: 100%;
    width: 100%;
    display: grid;
    grid-template-rows: 26px auto;
}

#main-container {
    display: grid;
    grid-template-rows: 50% auto;
    /*padding-top: 1rem;*/
    height: 100%;
    width: 100%;
    box-sizing: border-box;
}

#main-container #top-layer {
    display: grid;
    grid-template-columns: 50% auto;
    height: 100%;
    column-gap: 1rem;
    width: 98%;
    margin-left: auto;
    margin-right: auto;
}

#main-container #top-layer .browser-container {
    height: 100%;
    width: 100%;
    position: relative;
}

#main-container #top-layer #browser {
    height: 100%;
    width: 100%;
    display: grid;
    grid-template-rows: auto 2.5rem;
    grid-template-columns: 100%;
    background-color: var(--secondary-color);
    border-radius: 0.5rem;
    overflow: hidden;
    align-items: end;
    justify-items: start;
}

#main-container #top-layer #browser .wrapper:first-of-type {
    display: grid;
    grid-template-columns: 4rem auto;
}

#main-container #top-layer #browser .wrapper:last-of-type {
    height: 100%;
    width: 100%;
    background-color: var(--main-bg-color);
    position: relative;
    box-sizing: border-box;
    overflow: hidden;
    z-index: 6;
}

#main-container #top-layer #browser .wrapper:last-of-type .scroller {
    height: 100%;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
    padding: 0.2rem;
    box-sizing: border-box;
    scroll-snap-type: both mandatory;
}

#main-container #top-layer #browser .wrapper:last-of-type .scroller > p {
    height: 100%;
    line-height: 2rem;
    margin: 0;
    margin-left: 0.5rem;
    font-weight: lighter;
    opacity: 0.2;
    color: var(--paragraph-color);
}


#main-container #top-layer #browser .wrapper:last-of-type .scroller::-webkit-scrollbar {
    width: 5px;
    height: 2px;
}
#main-container #top-layer #browser .wrapper:last-of-type .question-circle {
    position: absolute;
    left: 0.5rem;
    top: 50%;
    transform: translate(0, -50%);
    opacity: 1;
    height: 1rem;
    width: fit-content;
}

#main-container #top-layer #browser .wrapper:last-of-type .tab {
    max-height: 2rem;
    height: 100%;
    width: fit-content;
    min-width: 2rem;
    background-color: var(--secondary-color);
    border-radius: 1rem;
    display: inline-block;
    margin-right: 0.2rem;
    scroll-snap-align: start;
    border: none;
    outline: none;
    padding: auto;
    animation: fade-in 200ms ease-in-out;
    transition: all 100ms ease-in-out;
}

#main-container #top-layer .properties-pane {
    height: 20rem;
    width: 100%;
    position: absolute;
    left: 0;
    bottom: 2.5rem;
    background-color: var(--main-bg-color);
    animation: properties-slide-in 400ms ease-in-out;
    z-index: 5;
    border-radius: 0.5rem 0.5rem 0 0;
    padding: 1rem;
    box-sizing: border-box;
}

#main-container #top-layer .properties-pane .container {
    height: 100%;
    width: 100%;
    animation: slide-in-left-properties 400ms ease-in-out;
    animation-fill-mode: both;
}

#main-container #top-layer .properties-pane .container h1.title {
    margin: 0;
    color: var(--title-color);
    font-size: 1.5rem;
    font-weight: lighter;
}

.browser-tab-container #empty {
    animation: fade-in 200ms ease-in-out;
    animation-fill-mode: both;
}

#main-container #top-layer #browser .wrapper:last-of-type .tab p {
    width: fit-content; 
    font-size: 0.9rem;
    margin: 0;
    display: inline-block;
    float: left;
    color: var(--paragraph-color);
}

#main-container #top-layer #browser .wrapper:last-of-type .tab:hover {
    background-color: var(--secondary-button-color);
}

#main-container #top-layer #browser .wrapper:last-of-type .tab .cross {
    display: inline-block;
    float: right; 
    margin-left: 0.5rem;
    cursor: pointer;
}

#main-container #top-layer #browser .wrapper:last-of-type .tab .cross i {
    font-size: 0.9rem;
    color: var(--paragraph-color);
}

#main-container #top-layer #browser .content-container {
    height: 100%;
    width: 100%;
}

#main-container #top-layer #browser .content-container > div {
    height: 100%;
    width: 100%;
    animation: slide-in-left 200ms ease-in-out;
}

#main-container #top-layer #browser .content-container #files {
    /*Display grid is in reality set in the main.js script*/
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
    white-space: pre-wrap;
    grid-template-rows: repeat(4, 6rem);
    row-gap: 1rem;
    column-gap: 0.5rem;
    padding: 0.5rem;
    box-sizing: border-box;
    overflow-y: visible;
}


#main-container #top-layer #browser .content-container #files > div {
    height: 100%;
    width: 100%;

    border-radius: 0.25rem;
    display: inline-block;
    vertical-align: top;
}

#main-container #top-layer #browser .content-container #files > div .content {
    height: 100%;
    width: 100%;
    display: grid;
    padding-top: 0.3rem;
    box-sizing: border-box;
    grid-template-rows: auto 1.5rem;
    grid-template-columns: 100%;
    overflow: hidden;
}

#main-container #top-layer #browser .content-container #files > div .content p {
    line-height: 1.5rem;
    margin: 0;
    height: 100%;
    width: 100%;
    text-align: center;
}
/* ... */

